--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "axios": "^0.18.0",
     "bulma": "^0.7.1",
     "vue": "^2.5.17",
+    "vue-notification": "^1.3.13",
     "vue-router": "^3.0.1",
+    "vuelidate": "^0.7.4",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
