--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bulma": "^0.7.1",
+    "chart.js": "^2.7.2",
     "vue": "^2.5.17",
+    "vue-chartkick": "^0.5.0",
     "vue-multiselect": "^2.1.0",
     "vue-notification": "^1.3.13",
     "vue-router": "^3.0.1",
